Fix footer text alignment

--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ button {
     align-items: center;
     justify-items:center;
     height: 100px;
+    width: 100%;
 }
 
 .footer-text {
@@ -227,5 +228,6 @@ button {
     align-items: center;
     font-size: 15px;
     color: white;
+    margin: auto;
 
 }
